--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   </properties>
 
   <build>
+    <finalName>dummyproject</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -59,6 +60,11 @@
   </build> 
 
   <dependencies>
+                <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-tomcat</artifactId>
+                <scope>provided</scope>
+              </dependency>
                <dependency>
                   <groupId>junit</groupId>
                   <artifactId>junit</artifactId>
